--- a/app/src/pages/TrainCatalog/Trening_catalog/css/catalog.module.css
+++ b/app/src/pages/TrainCatalog/Trening_catalog/css/catalog.module.css
@@ -1,7 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter&family=Roboto+Slab&display=swap');
 
 
-
+.headerItem {
+    background-color: #000 !important;
+}
 .wrapper{
     position: relative;
 }
